--- a/10-react-quiz/src/index.css
+++ b/10-react-quiz/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Codystar&display=swap");
+
 :root {
   --color-darkest: #343a40;
   --color-dark: #495057;
@@ -7,8 +9,6 @@
   --color-theme: #1098ad;
   --color-accent: #ffa94d;
 }
-
-@import url("https://fonts.googleapis.com/css2?family=Codystar&display=swap");
 
 * {
   margin: 0;
@@ -40,10 +40,10 @@ body {
   width: 50rem;
 }
 
-.app-header {
-  width: 66rem;
+.app-header {  
   margin-bottom: 4rem;
   display: flex;
+  gap: 5rem;
   align-items: center;
   justify-content: space-between;
 }
