--- a/16-fast-react-pizza/src/index.css
+++ b/16-fast-react-pizza/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .input {
-    @apply w-full rounded-full border border-stone-200 px-4 py-2 text-sm focus:outline-none focus:ring-1 focus:ring-yellow-500;
+    @apply rounded-full border border-stone-200 px-4 py-2 text-sm focus:outline-none focus:ring-1 focus:ring-yellow-500;
   }
 
   .loader {
